--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,10 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.20.1"
+  },
+  "devDependencies": {
+    "cypress": "^15.8.2"
   }
 }
